--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
